[FIX] do not cut off usernames over video thumbnails - https://github.com/jitsi/jitsi-meet/issues/335#issuecomment-181142086

--- a/css/videolayout_default.css
+++ b/css/videolayout_default.css
@@ -176,7 +176,6 @@
     text-align: center;
     text-overflow: ellipsis;
     width: 70%;
-    height: 20%;
     left: 15%;
     top: 40%;
     padding: 5px;
